Project

General

Profile

Actions

Bug #38706

closed

flush skips requests in QOS throttler queue

Added by Mykola Golub about 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The flush request must wait for all in-flight operations to complete. But if QOS is enabled currently it does not wait for those that are in the throttler queue.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #38869: nautilus: flush skips requests in QOS throttler queueResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman about 5 years ago

  • Backport changed from mimic to mimic,nautilus
Actions #2

Updated by Jason Dillaman about 5 years ago

  • Status changed from In Progress to Pending Backport
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38868: mimic: flush skips requests in QOS throttler queue added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38869: nautilus: flush skips requests in QOS throttler queue added
Actions #5

Updated by Jason Dillaman almost 5 years ago

  • Pull request ID set to 26931
Actions #6

Updated by Jason Dillaman almost 5 years ago

  • Backport changed from mimic,nautilus to nautilus
Actions #7

Updated by Nathan Cutler almost 5 years ago

Jason wrote: "Backport not required for Mimic" and rejected the mimic backport issue. I am now deleting that issue because it causes the backport-create-issues script to emit an error: "ERROR:root:http://tracker.ceph.com/issues/38706 has more backport issues (mimic,nautilus) than expected (nautilus)"

Actions #8

Updated by Nathan Cutler almost 5 years ago

  • Copied to deleted (Backport #38868: mimic: flush skips requests in QOS throttler queue)
Actions #9

Updated by Nathan Cutler almost 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF